[gd_scene load_steps=7 format=3 uid="uid://mw0vbll3j0xv"]

[ext_resource type="Script" path="res://asteroids/baseAsteroid/baseAsteroid.gd" id="1_l50v5"]
[ext_resource type="Texture2D" uid="uid://bycpab7gu2fj0" path="res://ART/asteroidArts/Gilded Rock.png" id="2_jvd4f"]

[sub_resource type="Animation" id="Animation_iri7d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vmnkd"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yavai"]
_data = {
"RESET": SubResource("Animation_iri7d"),
"idle": SubResource("Animation_vmnkd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gaxay"]
radius = 46.0435

[node name="asteroid" type="CharacterBody2D"]
script = ExtResource("1_l50v5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yavai")
}
autoplay = "idle"

[node name="attributes" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 8)
scale = Vector2(4, 4)
texture = ExtResource("2_jvd4f")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 9)
shape = SubResource("CircleShape2D_gaxay")

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 3.0
explosiveness = 0.91
randomness = 0.42
lifetime_randomness = 0.64
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 111.11
initial_velocity_max = 111.11
scale_amount_min = 4.0
scale_amount_max = 4.0

[node name="parasiteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="parasiteTimer" to="." method="_on_parasite_timer_timeout"]
